# server/models/ipns_resolve_request.py
@@ -1,0 +1,64 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from server.models.base_model_ import Model
+from server import util
+
+
+class IPNSResolveRequest(Model):
+    """NOTE: This class is auto generated by the swagger code generator program.
+
+    Do not edit the class manually.
+    """
+    def __init__(self, name: str=None):  # noqa: E501
+        """IPNSResolveRequest - a model defined in Swagger
+
+        :param name: The name of this IPNSResolveRequest.  # noqa: E501
+        :type name: str
+        """
+        self.swagger_types = {
+            'name': str
+        }
+
+        self.attribute_map = {
+            'name': 'name'
+        }
+        self._name = name
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'IPNSResolveRequest':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The IPNSResolveRequest of this IPNSResolveRequest.  # noqa: E501
+        :rtype: IPNSResolveRequest
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def name(self) -> str:
+        """Gets the name of this IPNSResolveRequest.
+
+
+        :return: The name of this IPNSResolveRequest.
+        :rtype: str
+        """
+        return self._name
+
+    @name.setter
+    def name(self, name: str):
+        """Sets the name of this IPNSResolveRequest.
+
+
+        :param name: The name of this IPNSResolveRequest.
+        :type name: str
+        """
+        if name is None:
+            raise ValueError("Invalid value for `name`, must not be `None`")  # noqa: E501
+
+        self._name = name
