# server/models/ipns_resolve_response.py
@@ -1,0 +1,64 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from server.models.base_model_ import Model
+from server import util
+
+
+class IPNSResolveResponse(Model):
+    """NOTE: This class is auto generated by the swagger code generator program.
+
+    Do not edit the class manually.
+    """
+    def __init__(self, cid: str=None):  # noqa: E501
+        """IPNSResolveResponse - a model defined in Swagger
+
+        :param cid: The cid of this IPNSResolveResponse.  # noqa: E501
+        :type cid: str
+        """
+        self.swagger_types = {
+            'cid': str
+        }
+
+        self.attribute_map = {
+            'cid': 'cid'
+        }
+        self._cid = cid
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'IPNSResolveResponse':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The IPNSResolveResponse of this IPNSResolveResponse.  # noqa: E501
+        :rtype: IPNSResolveResponse
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def cid(self) -> str:
+        """Gets the cid of this IPNSResolveResponse.
+
+
+        :return: The cid of this IPNSResolveResponse.
+        :rtype: str
+        """
+        return self._cid
+
+    @cid.setter
+    def cid(self, cid: str):
+        """Sets the cid of this IPNSResolveResponse.
+
+
+        :param cid: The cid of this IPNSResolveResponse.
+        :type cid: str
+        """
+        if cid is None:
+            raise ValueError("Invalid value for `cid`, must not be `None`")  # noqa: E501
+
+        self._cid = cid
